# omnipath-secondary-adapter

./: .gitignore  .pre-commit-config.yaml  README.md  croissant.jsonld  profile1000.txt  profile_results_complete.txt  profilecomplete.txt  pyproject.toml  sandboxdownload.py  test_csv  weave_knowledge_graph.py  weave_knowledge_graph_backup.py  weave_knowledge_graph_original.py  weave_knowledge_graph_sandbox.py  weave_knowledge_graph_small_molecules.py
.github/actions/: test_networks.yaml
.github/workflows/: test_and_code_quality.yaml
config/: biocypher_config.yaml  biocypher_config_annotations.yaml  biocypher_config_complexes.yaml  biocypher_config_enzymePTM.yaml  biocypher_config_intercell.yaml  schema_config.yaml  schema_config_annotations.yaml  schema_config_complexes.yaml  schema_config_enzymePTM.yaml  schema_config_intercell.yaml  single_edge_type_schema_config.yaml
cypher_queries/: basic_queries.cypher
data_testing/: subset_annotations.tsv  subset_annotations_1000.tsv  subset_complexes.tsv  subset_enz_sub.tsv  subset_interactions_backup.tsv  subset_interactions_missing_target.tsv  subset_intercell.tsv  subset_intercell_1000.tsv  subset_networks_100.tsv  subset_networks_1000.tsv
data_testing/networks/: subset_interactions_edgecases.tsv  subset_interactions_missing_source.tsv  subset_interactions_missing_target.tsv
docs_adapter/: instructions-ontoweaver-adapters.md
notebooks/: EDA_annotations.ipynb  EDA_complex_db.ipynb  EDA_enzymePTM_db.ipynb  EDA_intercell_db.ipynb  EDA_networks.ipynb  EDA_networks_db.ipynb
omnipath_secondary_adapter/: models.py  networks.yaml
omnipath_secondary_adapter/adapters/: intercell.yaml  mirna_transcriptional_networks.yaml  networks.py  networks.yaml  networks_multiple_edge_types.yaml  networks_single_edge_type.yaml  networks_source.yaml  networks_target.yaml  post_transcriptional_networks.yaml  post_translational_networks.yaml  small_molecule_protein_networks.yaml  small_molecules.yaml  transcriptional_networks.yaml
sandbox/: datatypes_omnipath.py  models_pandera.py  models_pydantic.py  sandbox.py
scripts/: build.sh  generate_data_subset_allatonce.sh  generate_data_subset_individual.sh
tests/: test_networks_dataset.py
(+12 files in other folders)
