[tool.poetry]
name = "omnipath-secondary-adapter"
version = "0.1.0"
description = "BioCypher adapter to retrieve and generate Knowledge Graphs from Omnipath data"
authors = [
    "Edwin Carreño <edwin.carreno@iwr.uni-heidelberg.de>",
    "Matthieu Najm <matthieu.najm@pasteur.fr>",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
biocypher = "^0.9.1"
ipykernel = "^6.29.5"
ontoweaver = "0.2.1"
pytest-cov = "^6.0"
sqlalchemy = "^2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = ">=6.0"
pre-commit = ">=2.17.0"
ruff = "^0.2.0"
