[project]
name = "omnipath-secondary-adapter"
version = "0.1.0"
description = "BioCypher adapter to retrieve and generate Knowledge Graphs from Omnipath data"
authors = [
    { name = "Edwin Carreño", email = "edwin.carreno@iwr.uni-heidelberg.de" },
    { name = "Matthieu Najm", email = "matthieu.najm@pasteur.fr" },
]
license = "MIT"
readme = "README.md"
package-mode = false
requires-python = ">=3.12,<3.13"

dependencies = [
    "biocypher>=0.11.0,<1.0",
    "ipykernel>=6.29.5,<7.0",
    "pytest-cov>=6.0,<7.0",
    "sqlalchemy>=2.0,<3.0",
    "ontoweaver>=1.2.0, <1.3.0",
]

[dependency-groups]
dev = [
    "pytest>=6.0",
    "pre-commit>=2.17.0",
    "ruff>=0.2.0",
]
